# quote-mind

./: .cursorrules  .env.example  .fcignore  .gitignore  AGENTS.md  BUILD_LOG.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  Makefile  README.md  index.py  index_ingest.py  pyproject.toml  requirements.txt
.cursor/rules/: cyberos.mdc
.github/workflows/: ci.yml  deploy.yml  health.yml
deploy/: custom_domain.py  demo_clip.py  demo_shots.py  eval_snapshot.py  ingest.py  issue_cert.py  list_resources.py  provision.py  record_cassettes.py  s.yaml  seed.py  smoke.py  smoke_trace.py  upload_site.py
docs/: Cowork_Kickoff_Prompt.md  architecture.md  architecture.mmd  demo-narration.md  demo-script.md  known-limitations.md  roadmap.html  sample-quote.html  submission-description.md  traceability.csv  verification-log.md
docs/deploy/: alibaba-proof.txt  alibaba-resources.txt  custom-domain.md  oss-trigger.md
docs/feature-requests/: BACKLOG.md
docs/spec/: QuoteMind_Architecture_v1.0.md  QuoteMind_Demo_Script_v1.0.md  QuoteMind_PRD_SRS_v1.0.md  QuoteMind_Repo_Blueprint_v1.0.md  QuoteMind_Submission_Description_v1.0.md  architecture.mmd  pipeline-sequence.mmd
docs/spec/agent-specs/: AGT-01_Orchestrator.md  AGT-02_IntakeClassifier.md  AGT-03_DocumentParser.md  AGT-04_CatalogMatcher.md  AGT-05_PricingEngine.md  AGT-06_QuoteDrafter.md  AGT-07_CriticValidator.md  AGT-08_DispatchAgent.md  INDEX.md
docs/status/: index.html
docs/tasks/: BACKLOG.md
eval/dataset/: en_xlsx_001.xlsx  en_xlsx_002.xlsx  labels.json  vi_xlsx_001.xlsx  vi_xlsx_002.xlsx  vi_xlsx_003.xlsx
eval/dataset/cassettes/: adv_001.json  adv_002.json  vi_text_001.json  vi_text_003.json  vi_text_010.json
eval/reports/: 20260711T054832Z_baseline.json  20260711T054832Z_pipeline.json  20260711T054832Z_summary.md  20260711T064812Z_summary.md  20260711T184759Z_summary.md
src/quotemind/: __init__.py  dispatch.py  intake.py  orchestrator.py  service.py
src/quotemind/agents/: __init__.py  matcher.py  model.py  parser.py  planner.py  reviewer.py  vision.py
src/quotemind/api/: app.py  auth.py  fc.py
src/quotemind/cloud/: __init__.py  alibaba_proof.py  oss.py
src/quotemind/config/: bootstrap.py  model_prices.yaml  models.py  seller.py  settings.py
src/quotemind/eval_/: baseline.py  cassette.py  latest.json  metrics.py  report.py  run.py
src/quotemind/memory/: __init__.py  budget.py  embedding.py  episodic.py  gc.py  quotes.py  recall.py  sop.py  store.py
src/quotemind/models/: __init__.py  audit.py  catalog.py  common.py  critic.py  eval.py  extraction.py  intake.py  matching.py  memory.py  plan.py  quote.py  quote_record.py  trace.py
src/quotemind/obs/: __init__.py  cost.py  errors.py  log.py  otel.py  trace.py
src/quotemind/parsing/: __init__.py  excel.py  pdf.py  raster.py  validate.py
src/quotemind/pricing/: __init__.py  engine.py  vat.py  words_vi.py
src/quotemind/prompts/: __init__.py
src/quotemind/quote/: __init__.py  assemble.py  critic.py  numbering.py
src/quotemind/quote/render/: __init__.py  quote.html.j2
src/quotemind/quote/render/fonts/: README.md
src/quotemind/seed/: data.py  generate.py  sop.py
src/quotemind/tools/: __init__.py  customer.py  matching.py
src/quotemind/web/: __init__.py  index.html
tests/: conftest.py
tests/golden/: test_golden_pdf.py
tests/integration/: test_smoke_eval.py
tests/unit/: test_agents.py  test_api_quotes.py  test_assemble.py  test_audit_chain.py  test_auth.py  test_bootstrap.py  test_budget.py  test_critic.py  test_customer.py  test_customer_resolution.py  test_dashboard_route.py  test_dashscope_base_url.py  test_dispatch.py  test_embedding.py  test_episodic_scoring.py  test_eval.py  test_excel_parser.py  test_fc_handler.py  test_file_intake.py  test_gc.py  test_health.py  test_intake.py  test_live_audit_regressions.py  test_logging.py  test_matching.py  test_memory_store.py  test_models_roundtrip.py  test_numbering.py  test_obs.py  test_orchestrator.py  test_planner.py  test_pricing.py  test_recall.py  test_refusal_explains_itself.py  test_render.py  test_render_pdf.py  test_roadmap_finish.py  test_service.py  test_settings.py  test_state_machine.py  (+3 more)
web/: index.html
