[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quotemind"
version = "0.1.0"
description = "QuoteMind - autonomous RFQ-to-quote autopilot for Vietnamese IT reselling (Qwen Cloud Hackathon, Track 4)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "CyberSkill Software Solutions Consultancy and Development JSC" }]

# Light core: what the scaffold and the API surface import. The full runtime stack
# (QM-SPEC-001 §4.4) is pinned under domain extras below so PR-1 boots and tests stay
# green before native PDF/agent libraries exist. See docs/verification-log.md.
dependencies = [
    "pydantic>=2.9",
    "pydantic-settings>=2.7",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "python-multipart>=0.0.9",
    "python-ulid>=3.0",
    "PyYAML>=6",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.11,<2",
    "import-linter>=2.1",
    "hypothesis>=6.100",
    "types-PyYAML>=6",
]
agents = ["agentscope==1.0.9", "mcp>=1.28,<2", "openai>=1.55,<3"]
memory = ["tablestore>=6.4.7", "tablestore-for-agent-memory==1.1.3"]
cloud = ["oss2>=2.19,<3"]
parse = ["openpyxl>=3.1", "pypdfium2>=5.9"]
pdf = ["weasyprint==68.*"]
obs = ["opentelemetry-sdk>=1.30", "opentelemetry-api>=1.30"]
all = [
    "agentscope==1.0.9",
    "mcp>=1.28,<2",
    "openai>=1.55,<3",
    "tablestore>=6.4.7",
    "tablestore-for-agent-memory==1.1.3",
    "oss2>=2.19,<3",
    "openpyxl>=3.1",
    "pypdfium2>=5.9",
    "weasyprint==68.*",
    "opentelemetry-sdk>=1.30",
    "opentelemetry-api>=1.30",
]

[project.urls]
Homepage = "https://github.com/cyberskill-official/quote-mind"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
extend-exclude = [".cyberos", "docs/spec", ".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
# UP017 (datetime.UTC) is skipped so the code also runs on 3.10 for the offline gate;
# datetime.timezone.utc is valid on 3.12 as well.
ignore = ["UP017"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Header",
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["quotemind"]
branch = true

# Import-linter enforces the module-contract layering in QM-REPO-001 §4. The contract
# set grows as packages gain content; empty scaffolded packages pass trivially.
[tool.importlinter]
root_package = "quotemind"

[[tool.importlinter.contracts]]
name = "Layered architecture (QM-REPO-001 4)"
type = "layers"
layers = [
    "quotemind.api",
    "quotemind.agents",
    "quotemind.tools",
    "quotemind.quote",
    "quotemind.parsing",
    "quotemind.memory",
    "quotemind.pricing",
    "quotemind.models",
    "quotemind.config",
]

[[tool.importlinter.contracts]]
name = "Nothing imports the API layer"
type = "forbidden"
source_modules = [
    "quotemind.agents",
    "quotemind.tools",
    "quotemind.quote",
    "quotemind.parsing",
    "quotemind.memory",
    "quotemind.pricing",
    "quotemind.models",
    "quotemind.config",
    "quotemind.cloud",
    "quotemind.obs",
]
forbidden_modules = ["quotemind.api"]

[[tool.importlinter.contracts]]
name = "Pricing is pure (deterministic money, D-03)"
type = "forbidden"
source_modules = ["quotemind.pricing"]
forbidden_modules = [
    "quotemind.agents",
    "quotemind.tools",
    "quotemind.api",
    "quotemind.cloud",
    "quotemind.parsing",
    "quotemind.memory",
]

[[tool.importlinter.contracts]]
name = "Models import nothing internal but config"
type = "forbidden"
source_modules = ["quotemind.models"]
forbidden_modules = [
    "quotemind.agents",
    "quotemind.tools",
    "quotemind.api",
    "quotemind.pricing",
    "quotemind.parsing",
    "quotemind.memory",
    "quotemind.quote",
    "quotemind.cloud",
    "quotemind.obs",
]
